trunk/Archive2/6a/cd02eb9d388d1d/output
main.cpp:72:5: error: stray '\' in program
     cout << right << "+1 " << data[right] << \n";
     ^
main.cpp:72:48: warning: missing terminating " character
     cout << right << "+1 " << data[right] << \n";
                                                ^
main.cpp:72:5: error: missing terminating " character
     cout << right << "+1 " << data[right] << \n";
     ^
main.cpp: In function 'int search(int*, int, int, int, int)':
main.cpp:72:47: error: 'n' was not declared in this scope
     cout << right << "+1 " << data[right] << \n";
                                               ^
